--- a/09_regex.ipynb
+++ b/09_regex.ipynb
@@ -46,7 +46,7 @@
     "pattern = \"[0-9]{4}[a-zA-Z]{2}\"\n",
     "```\n",
     "\n",
-    "Specifies a pattern that will look for four digits followed by two upper- or lowercase latters.\n",
+    "Specifies a pattern that will look for four digits followed by two upper- or lowercase letters.\n",
     "\n",
     "The Python `re` module provides all functionality for this kind of work."
    ]
@@ -107,8 +107,9 @@
     "\n",
     "| Function      | Description |\n",
     "| :---        |    :----  |\n",
-    "| **`findall(pattern, text)`**  | Returns a list containing all matches of `pattern` in `text`  |\n",
+    "| **`match(pattern, text)`**  | Returns a Match object if there is a complete match of `pattern` with `text`  |\n",
     "| **`search(pattern, text)`**   | Returns a Match object if there is a match of `pattern` anywhere in `text` |\n",
+    "| **`findall(pattern, text)`**  | Returns a list containing all matches of `pattern` in `text`  |\n",
     "| **`finditer(pattern, text)`**   | Returns an iterator of Match objects for all matches of `pattern` in `text` |\n",
     "| **`split(pattern, text)`**   | Returns a list where the string has been split on each occurrences of `pattern` in `text`   |\n",
     "| **`sub(pattern, replacement, text)`**   | Replaces one or many matches of `pattern` with `replacement` in text and returns the resulting string    |\n"
@@ -712,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
