--- a/11_exercises.ipynb
+++ b/11_exercises.ipynb
@@ -1807,7 +1807,297 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TBD"
+    "### Restriction enzymes\n",
+    "\n",
+    "For each of these [restriction enzyme](https://en.wikipedia.org/wiki/Restriction_enzyme) recognition sequences, write the corresponding best / most specific / most concise regex. See [here](https://droog.gs.washington.edu/parc/images/iupac.html) for the IUPAC ambiguity codes.\n",
+    "\n",
+    "**challenge** write a function that does this automatically.\n",
+    "\n",
+    "- GAATTC (ECORI)\n",
+    "- CCWGG (EcoRII)\n",
+    "- GGATCNNNN (AlwI)\n",
+    "- GGYRCC (BanI)\n",
+    "- GCCNNNNNGGC (BglI)\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "ecor_r1 = \"GA{2}T{2}C\n",
+    "eco_r2 = \"CC[AT]GG\"\n",
+    "alw_1 = \"GGATC[GATC]{4}\"\n",
+    "ban_1 = \"GG[CT]CC\"\n",
+    "bgl_1 = :\"GCC[GATC]{5}GGC\"\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Legal DNA and Protein\n",
+    "DNA consists of the letters A, C, G, and T.  \n",
+    "RNA consists of the letters A, C, G, and U.  \n",
+    "Protein sequences can have the characters A, C, D, E, F, G, H, I, K, L, M, N, P, Q, R, S, T, V, W, and Y.\n",
+    "\n",
+    "Using the `re` module, write a function establishing what type of sequence is passed and returning 'DNA', 'RNA', 'PROTEIN' or 'UNKNOWN'.  \n",
+    "Demonstrate its usage within a list comprehension.\n",
+    "<br>\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint</summary>\n",
+    "Use this:    \n",
+    "\n",
+    "```python\n",
+    "re.match('^YOUR PATTERN$', sequence):\n",
+    "```\n",
+    "</details>\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "def sequence_type(sequence):\n",
+    "    if re.match('^[gatcGATC]+$', sequence):\n",
+    "        return 'DNA'\n",
+    "    if re.match('^[gaucGAUC]+$', sequence):\n",
+    "        return 'RNA'\n",
+    "    if re.match('^[ACDEFGHIKLMNPQRSTVWY]+$', sequence):\n",
+    "        return 'protein'\n",
+    "    return 'UNKNOWN'\n",
+    "\n",
+    "[sequence_type(seq) for seq in sequences]\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## some sequences\n",
+    "import re\n",
+    "sequences = ['CATCATGAAATCGCTTGTCGCACTACTGCTGCTTTTAGTCGCTACTTCTGCCTTTGCTGACCAGT', #DNA\n",
+    "             'GACUAGCCAUUACGACGCAUUACAACGAUUAGACA', #RNA\n",
+    "             'GPEAGQTVKHVHVHILPRKAGDFHRNDSIYDALEKHDREDKDSPALWRSEE', #PROTEIN\n",
+    "             'THISISNOTABIOLOGICALSEQUENCE'] # UNKNOWN\n",
+    "\n",
+    "## YOUR CODE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dates\n",
+    "\n",
+    "In the Netherlands, we write dates as 'DD/MM/YYYY': '15/10/2024' of '15-10-2024'. When the day or the month is single-digit, we ofte omit the leading zero (`9` instead of `09`).  \n",
+    "\n",
+    "a) Write a pattern for Dutch dates and apply these to the given text below using `re.findall()`.  \n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "re.findall(\"\\d{1,2}[-/]\\d{1,2}[-/]\\d{4}\", text)\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"\"\"On 1-3-1947 the first foundations were laid for the European Union, in the Treaty of Brussels. \n",
+    "The Treaty of Rome, establishing the European Economic Community (EEC) was signed on 1-1-1957. \n",
+    "The date 1/11/1993 marked the start of the European Union. The Euro currency was adopted on 01-01-2002.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) Using `re.finditer()` and the correct Match object method(s), extract only the years of the dates out of the text, into a list.  \n",
+    "Challenge: use a list comprehension for this.\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "[m.group(1) for m in re.finditer(\"\\d{1,2}[-/]\\d{1,2}[-/](\\d{4})\", text)]\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Telephone numbers\n",
+    "\n",
+    "In the Netherlands, phone numbers are written with an area code or mobile code (06) followed by the individual number. These two can be separated by a space or a hyphen. All phone numbers are 10 digits long. Besides this, phone numbers can be preceded by the country code, indicated by a `+` with the country code. For simplicity's sake, we'll assume that all country codes are 2 digits long.\n",
+    "\n",
+    "Given the list of phone numbers below, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phone_numbers = ['06-27635908', \n",
+    "                 '050-26653422', \n",
+    "                 '020-7654321', \n",
+    "                 '06-23456789', \n",
+    "                 '06 34567890',\n",
+    "                 '010 7736961',\n",
+    "                 '+31-30-4567892', \n",
+    "                 '+31 10 74638292', \n",
+    "                 '+31 70 3665287',\n",
+    "                 '+32 6 27830919']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "a) Write a regular expression that describes all telephone numbers without country codes (numbers 1-6 above). Demonstrate its use with the list of numbers using `re.match()`.\n",
+    "\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "pattern = \"\\d{2,3}[\\s-]\\d{7,8}\"\n",
+    "for pn in phone_numbers:\n",
+    "    matched = re.match(pattern, pn)\n",
+    "    if matched:\n",
+    "        print(matched.group(0))\n",
+    "    else:\n",
+    "        print(f\"no match: {pn}\")\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) Extend the regular expression from part a) to also include international-styled telephone numbers. \n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint</summary>\n",
+    "Use the `|`, \"or\" symbol for this regex. \n",
+    "</details>\n",
+    "\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "pattern = \"\\d{2,3}[\\s-]\\d{7,8}|\\+\\d{2}[\\s-]\\d{1,3}[ -]\\d{7,8}\"\n",
+    "for pn in phone_numbers:\n",
+    "    matched = re.match(pattern, pn)\n",
+    "    if matched:\n",
+    "        print(matched.group(0))\n",
+    "    else:\n",
+    "        print(f\"no match: {pn}\")\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c) Extract both area codes and phone numbers with area codes and create a dict with a list of phone numbers per area. Treat 06 as a normal area.\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint</summary>\n",
+    "Use the `()`, \"grouping\" symbols for this regex to extract parts of matches. \n",
+    "</details>\n",
+    "\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "results = dict()\n",
+    "pattern = \"(\\d{2,3})[\\s-]\\d{7,8}|\\+\\d{2}[\\s-](\\d{1,3})[ -]\\d{7,8}\"\n",
+    "for pn in phone_numbers:\n",
+    "    matched = re.match(pattern, pn)\n",
+    "    if matched:\n",
+    "        whole = matched.group(0)\n",
+    "        area = matched.group(1) if matched.group(2) is None else matched.group(2) \n",
+    "        if not area.startswith('0'):\n",
+    "            area = '0' + area\n",
+    "        results.setdefault(area, []).append(whole)\n",
+    "    else:\n",
+    "        print(f\"no match: {pn}\")\n",
+    "print(results)\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE"
    ]
   },
   {
