--- a/ITANN_course_description.ipynb
+++ b/ITANN_course_description.ipynb
@@ -103,7 +103,7 @@
     "        * Practice: 12.7.4.\n",
     "    * Script design & error handling\n",
     "        * As a group: 12.5.1. (12.4.4)\n",
-    "    * Learn how to program (hangman, sudoku, \"zeeslagje\" tegen de computer)\n",
+    "    * Learn how to program with one of the programming challenges, i.e. hangman, sudoku, sea battle (\"zeeslag\") against the computer\n",
     "        * Choose bigger project from 12.12.1-4\n",
     "\n"
    ]
@@ -121,12 +121,12 @@
     "    * List comprehensions\n",
     "    * \\[Optional\\] OOP    \n",
     "    * \\[Optional\\] regular expressions    \n",
-    "    * \\[Optional\\] writing and using mnodules    \n",
+    "    * \\[Optional\\] writing and using modules    \n",
     "\n",
     "    * discussion of challenges\n",
     "\n",
     "* Afternoon\n",
-    "    * Lefrtovers\n",
+    "    * Leftovers\n",
     "    * Evaluation of module\n",
     "    * Guest lecture\n",
     "\n"
