--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Programming is: operations on data\n",
+    "# Data: types & operations\n",
     "Without data there is not much computing to be done. All programs take data as input and most of them also generate data as output. In between, the data is processed, transformed and summarized.  \n",
     "Input can come from a variety of sources: from file, a database, keyboard, a GUI, web socket and output can go to different destinations as well.  \n",
     "This chapter deals with both the operators that work on data and the different basic data types Python knows about."
