--- a/06_core_library_functions.ipynb
+++ b/06_core_library_functions.ipynb
@@ -70,6 +70,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ce5d387",
+   "metadata": {},
+   "source": [
+    "### Use `zip()` to create dicts\n",
+    "\n",
+    "The `zip()` function is used most often to create dicts since the dict constructor accepts a series of two-element tuples as initialization values.\n",
+    "\n",
+    "Here is an example\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9ecafb49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 0)\n",
+      "('b', 1)\n",
+      "('c', 2)\n",
+      "('d', 3)\n",
+      "('e', 4)\n",
+      "{'a': 0, 'b': 1, 'c': 2, 'd': 3, 'e': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "tups = zip('abcde', range(5))\n",
+    "for t in tups:\n",
+    "    print(t)\n",
+    "    \n",
+    "my_dict = dict(zip('abcde', range(5)))\n",
+    "print(my_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abedee2f",
+   "metadata": {},
+   "source": [
+    "Note that if you try to do `my_dict(tups)` above, you get an empty dict because the tups object has already been iterated!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "92e7fd7e",
    "metadata": {
     "slideshow": {
