added two challenges

--- a/13_challenges.ipynb
+++ b/13_challenges.ipynb
@@ -235,6 +235,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Fasta parser and search tool \n",
+    "<p style=\"font-size:1.2em;font-weight:bold\"> Difficulty level: &#10034;&#10034;&#10034;&#10034;</p>\n",
+    "\n",
+    "Given the [Fasta sequence format](https://zhanggroup.org/FASTA/), create a parser for files of this type.  \n",
+    "Next, create an executable that can be used for these use cases (not all need to be implemented to have a passable project):  \n",
+    "\n",
+    "1. `FastaQuery.py --help` -- shows informative help/usage information.  \n",
+    "1. `FastaQuery.py –infile <INFILE> --summary` -- Creates a textual summary of the parsed file: number of sequences and average length\n",
+    "1. `FastaQuery.py –infile <INFILE> --word-freqs --length <LENGTH>` -- Reports word frequencies of the given length in the sequences, (optionally) \n",
+    "with as statistical analysis of their expected and actual frequency.\n",
+    "1. `FastaQuery.py –infile <INFILE> --fetch_id <ID>` -- Returns the sequence with this ID, in Fasta format.  \n",
+    "1. `FastaQuery.py –infile <INFILE> --search <string>` -- Returns the sequences with this string somewhere in the header, in Fasta format.  \n",
+    "1. `FastaQuery.py –infile <INFILE> --find_sites <DNA SEQ WITH IUPAC CODES>` -- Lists the sequences and locations of all the sites \n",
+    "where the DNA pattern is found: position and actual sequence and (if relevant) the element in which it resides.  \n",
+    "\n",
+    "Fasta files of whole genomes (DNA or protein!) can be downloaded from [https://www.ncbi.nlm.nih.gov/datasets/genome/](https://www.ncbi.nlm.nih.gov/datasets/genome/). \n",
+    "Simply search something like `Bacillus subtilis` and click on an entry. You can then choose to download sequences in different formats. \n",
+    "Choose \"Sequence and Annotation\" (gbff format).\n",
+    "Alternatively, you can look for gene families using for instance [protein](https://www.ncbi.nlm.nih.gov/protein); e.g. look for FHIT. Or do a BLAST and download all sequences as Fasta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sequence Profiler\n",
     "<p style=\"font-size:1.2em;font-weight:bold\"> Difficulty level: &#10034;&#10034;&#10034; to &#10034;&#10034;&#10034;&#10034;</p>\n",
     "\n",
@@ -311,6 +336,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Chemistry toolbox\n",
+    "<p style=\"font-size:1.2em;font-weight:bold\"> Difficulty level: &#10034;&#10034; to &#10034;&#10034;&#10034;&#10034;&#10034;</p>\n",
+    "\n",
+    "Create an app that implements _some_ of the use cases listed below.\n",
+    "\n",
+    "1. **pH Calculation**: Calculate the pH of a solution given its concentration of hydrogen ions (H⁺). The user should input the H⁺ concentration, and the program should output the pH value. You can use the formula pH = -log[H⁺].\n",
+    "1. **Molecular Weight**: Calculate the molecular weight of a chemical compound. The user should input the chemical formula, and the program should output the total molecular weight. You can use a dictionary to store the atomic weights of each element.\n",
+    "1. **Electron Configuration Generator**: Generate the electron configuration of an element based on its atomic number. The program should output the distribution of electrons in each energy level according to the Aufbau principle.\n",
+    "1. **Balancing Chemical Equations**: The user inputs an unbalanced chemical equation, and the program outputs the balanced equation. You can represent the equation as a matrix and solve it using linear algebra or implement an algorithm like Gauss-Jordan elimination.\n",
+    "1. **Ideal Gas Law Calculator**: Calculate various properties of an ideal gas using the ideal gas law equation ($PV = nRT$). The user inputs the values of pressure, volume, temperature, and the number of moles, and the program calculates the missing parameter or performs other related calculations.\n",
+    "1. **Chemical Reaction Simulator**: Build a simple chemical reaction simulator that allows the user to input reactants and their quantities, then predicts the products of the reaction based on predefined reaction rules. You can represent chemical reactions as dictionaries or classes and apply basic stoichiometry principles.\n",
+    "\n",
+    "Can you think of some interesting functionality yourself? I am a simple biologist..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Protein analysis tool\n",
     "<p style=\"font-size:1.2em;font-weight:bold\"> Difficulty level: &#10034;&#10034;&#10034;</p>\n",
     "\n",
@@ -351,7 +395,8 @@
     "## Genbank query tool \n",
     "<p style=\"font-size:1.2em;font-weight:bold\"> Difficulty level: &#10034;&#10034;&#10034;&#10034;</p>\n",
     "\n",
-    "Given the [GenBank format](https://www.ncbi.nlm.nih.gov/genbank/samplerecord/) (assume only one DNA sequence resides in a single file – if there are more, ignore these and report this to the user). Create a parser for files of this type, extracting of all Features only these ones:  \n",
+    "Given the [GenBank format](https://www.ncbi.nlm.nih.gov/genbank/samplerecord/) (assume only one DNA sequence resides in a single file – if there are more, ignore these and report this to the user).  \n",
+    "Create a parser for files of this type, extracting of all Features only these ones:  \n",
     "\n",
     "1.\tSource/organism\n",
     "2.\tCDS/coordinates\n",
@@ -363,7 +408,7 @@
     "8.\tSequence\n",
     "\n",
     "Create an appropriate data model. Object-oriented may be a nice challenge here but this is not required.  \n",
-    "Create an executable that can be used for these use cases:  \n",
+    "Create an executable that can be used for these use cases (not all need to be implemented to have a passable project):  \n",
     "\n",
     "1. `GenBankReader.py --help` shows informative help/usage information.  \n",
     "1. `GenBankReader.py --infile  <INFILE> --summary` -- Creates a textual summary of the parsed file: length of the sequence, number and types of features. Average lengths of the genes, number on forward strand, number on reverse strand. Maybe you can think of some more interesting features?  \n",
@@ -384,7 +429,7 @@
     "## GFF query tool \n",
     "<p style=\"font-size:1.2em;font-weight:bold\"> Difficulty level: &#10034;&#10034;&#10034;&#10034;</p>\n",
     "\n",
-    "Given the GFF3 sequence format (with or without sequences appended in-file; if not appended, a separate sequence file may be provided). Create a parser for files of this type extracting all annotations. Create an appropriate data model. Create an executable that can be used for these use cases:  \n",
+    "Given the [GFF3 sequence format](https://en.wikipedia.org/wiki/General_feature_format) (with or without sequences appended in-file; if not appended, a separate sequence file may be provided), create a parser for files of this type extracting all annotations. Create an appropriate data model. Next. create an executable that can be used for these use cases (not all need to be implemented to have a passable project):  \n",
     "\n",
     "1. `GffQuery.py --help` -- shows informative help/usage information.  \n",
     "1. `GffQuery.py –infile <INFILE> --summary` -- Creates a textual summary of the parsed file: length of the sequence, number and types of annotations. Average lengths of the genes, number on forward strand, number on reverse strand. Maybe you can think of some more interesting features?  \n",
